<resources>
    <string name="app_name">LazyRestaurant</string>
    <string name="search_label">Enter a location to explore all the amazing restaurants nearby</string>
    <string name="search_hint">(e.g. Waterloo)</string>
    <string name="search_text">SEARCH</string>
    <string name="search_around_you_text">SEARCH NEARBY</string>
    <string name="name_restaurant_label">Banh Cuon Hieu Nghia</string>
    <string name="res_nation_label">Vietnam</string>
    <string name="rating_label">%1$.1f (%2$d reviews)</string>
    <string name="no_fav_res_label">Sorry, you do not have any favorite restaurants</string>
    <string name="err_restaurants_label">Sorry, the provided location is invalid or something wrong has happened!</string>
    <string name="res_address_label">122 Race Course Rd, Singapore 218583</string>
    <string name="res_food_rating_label">Food Rating</string>
    <string name="price_label">$$$</string>
    <string name="res_price_rating_label">Price Rating</string>
    <string name="res_hours_label">Working Hours</string>
    <string name="working_hours">10 AM - 1 PM \n10 AM - 1 PM \n10 AM - 1 PM \n10 AM - 1 PM \n10 AM - 1 PM \n10 AM - 1 PM \n10 AM - 1 PM \n10 AM - 1 PM</string>
</resources>