<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/res_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_column="0"

            android:scaleType="centerCrop"
            android:src="@drawable/nha_trang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/res_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/res_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/res_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/name_restaurant_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/res_title"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/res_nation_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/res_name" />

            <RatingBar
                android:id="@+id/res_rating"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="76dp"
                android:layout_height="22dp"
                android:layout_marginTop="4dp"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/res_title" />

            <TextView
                android:id="@+id/res_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rating_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/res_rating" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/res_fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="0.5"
            android:layout_marginEnd="16dp"
            android:background="@drawable/favorite_btn_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>